# auto-feature-engineering

./: README.md  autofeat.ipynb  featuretools.ipynb  getml.ipynb  gplearn.ipynb  pyproject.toml  tsfresh.ipynb
