[tool.poetry]
name = "auto-feature-engineering"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
getml = "^1.5.1"
autofeat = "^2.1.3"
tsfresh = "^0.21.0"
featuretools = "^1.31.0"
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
jupyterlab = "^4.3.1"
matplotlib = "^3.10.5"
gplearn = "^0.4.2"
scikit-learn = "<=1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
